--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,76 @@
----
----
 
-@string{aps = {American Physical Society,}}
+% ------------------- 2024
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@inproceedings{basar2024extent,
+    title = "To What Extent Are Large Language Models Capable of Generating Substantial Reflections for Motivational Interviewing Counseling Chatbots? A Human Evaluation",
+    author = "Basar, Erkan  and
+      Hendrickx, Iris  and
+      Krahmer, Emiel  and
+      Bruijn, Gert-Jan  and
+      Bosse, Tibor",
+    booktitle = "Proceedings of the 1st Human-Centered Large Language Modeling Workshop",
+    year = {2024},
+    publisher = "ACL",
+    url = "https://aclanthology.org/2024.hucllm-1.4",
+    doi = "10.18653/v1/2024.hucllm-1.4",
+    pages = "41--52",
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{he2024roby,
+    author    = {Linwei He and Erkan Ba\c{s}ar and Emiel Krahmer and Reinout Wiers and Marjolijn Antheunis},
+    title     = {Effectiveness and user experience of a smoking cessation chatbot: A mixed-methods study comparing motivational interviewing and confrontational counseling},
+    year      = {2024},
+    journal = {Journal of Medical Internet Research},
+    doi = {10.2196/53134}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@unpublished{balaji2024mish,
+     author   = {Divyaa Balaji and Erkan Ba\c{s}ar and Margot van der Goot and Gert-Jan de Bruijn and Tibor Bosse and Reinout Wiers},
+     title    = {Using counselling-inspired relational strategies to facilitate self-disclosure with a chatbot in a sensitive domain: A qualitative study},
+     year       = {2024},
+     note = {Manuscript submitted for publication},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+% ------------------- 2023
+
+@inproceedings{basar2023hyleca,
+    author = {Ba\c{s}ar, Erkan and Balaji, Divyaa and He, Linwei and Hendrickx, Iris and Krahmer, Emiel and {de Bruijn}, Gert{-}Jan and Bosse, Tibor},
+    title = {Hy{LECA}: A Framework for Developing Hybrid Long-Term Engaging Controlled Conversational Agents},
+    year = {2023},
+    isbn = {9798400700149},
+    publisher = {Association for Computing Machinery},
+    url = {https://doi.org/10.1145/3571884.3604404},
+    doi = {10.1145/3571884.3604404},
+    booktitle = {Proceedings of the 5th International Conference on Conversational User Interfaces},
+    articleno = {56},
+    numpages = {5},
+    keywords = {natural language generation, task-oriented dialogue systems, hybrid conversational agents},
+    location = {Eindhoven, Netherlands},
+    series = {CUI '23}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+% ------------------- 2022
+
+@conference{basar2022hipw,
+    author={Erkan Ba\c{s}ar and Iris Hendrickx and Emiel Krahmer and Gert{-}Jan {de Bruijn} and Tibor Bosse.},
+    title={Hints of Independence in a Pre-scripted World: On Controlled Usage of Open-domain Language Models for Chatbots in Highly Sensitive Domains},
+    booktitle={Proceedings of the 14th International Conference on Agents and Artificial Intelligence - Volume 1: ICAART},
+    year={2022},
+    pages={401-407},
+    publisher={SciTePress},
+    organization={INSTICC},
+    doi={10.5220/0010914300003116},
+    isbn={978-989-758-547-0},
+    issn={2184-433X},
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{he2022chatbots,
+  title={Can chatbots help to motivate smoking cessation? A study on the effectiveness of motivational interviewing on engagement and therapeutic alliance},
+  author={He, Linwei and Ba\c{s}ar, Erkan and Wiers, Reinout W and Antheunis, Marjolijn L and Krahmer, Emiel},
+  journal={BMC Public Health},
+  volume={22},
+  number={1},
+  pages={726},
+  year={2022},
+  publisher={Springer}
 }
