--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,7 @@
 }
 
 @article{he2024roby,
-    author    = {Linwei He and Erkan Ba\c{s}ar and Emiel Krahmer and Reinout Wiers and Marjolijn Antheunis},
+    author    = {Linwei He and Erkan Basar and Emiel Krahmer and Reinout Wiers and Marjolijn Antheunis},
     title     = {Effectiveness and user experience of a smoking cessation chatbot: A mixed-methods study comparing motivational interviewing and confrontational counseling},
     year      = {2024},
     journal = {Journal of Medical Internet Research},
@@ -25,7 +25,7 @@
 }
 
 @unpublished{balaji2024mish,
-     author   = {Divyaa Balaji and Erkan Ba\c{s}ar and Margot van der Goot and Gert-Jan de Bruijn and Tibor Bosse and Reinout Wiers},
+     author   = {Divyaa Balaji and Erkan Basar and Margot van der Goot and Gert-Jan de Bruijn and Tibor Bosse and Reinout Wiers},
      title    = {Using counselling-inspired relational strategies to facilitate self-disclosure with a chatbot in a sensitive domain: A qualitative study},
      year       = {2024},
      note = {Manuscript submitted for publication},
@@ -34,7 +34,7 @@
 % ------------------- 2023
 
 @inproceedings{basar2023hyleca,
-    author = {Ba\c{s}ar, Erkan and Balaji, Divyaa and He, Linwei and Hendrickx, Iris and Krahmer, Emiel and {de Bruijn}, Gert{-}Jan and Bosse, Tibor},
+    author = {Basar, Erkan and Balaji, Divyaa and He, Linwei and Hendrickx, Iris and Krahmer, Emiel and {de Bruijn}, Gert{-}Jan and Bosse, Tibor},
     title = {Hy{LECA}: A Framework for Developing Hybrid Long-Term Engaging Controlled Conversational Agents},
     year = {2023},
     isbn = {9798400700149},
@@ -51,8 +51,19 @@
 
 % ------------------- 2022
 
+@article{he2022chatbots,
+  title={Can chatbots help to motivate smoking cessation? A study on the effectiveness of motivational interviewing on engagement and therapeutic alliance},
+  author={He, Linwei and Basar, Erkan and Wiers, Reinout W and Antheunis, Marjolijn L and Krahmer, Emiel},
+  journal={BMC Public Health},
+  volume={22},
+  number={1},
+  pages={726},
+  year={2022},
+  publisher={Springer}
+}
+
 @conference{basar2022hipw,
-    author={Erkan Ba\c{s}ar and Iris Hendrickx and Emiel Krahmer and Gert{-}Jan {de Bruijn} and Tibor Bosse.},
+    author={Erkan Basar and Iris Hendrickx and Emiel Krahmer and Gert{-}Jan {de Bruijn} and Tibor Bosse.},
     title={Hints of Independence in a Pre-scripted World: On Controlled Usage of Open-domain Language Models for Chatbots in Highly Sensitive Domains},
     booktitle={Proceedings of the 14th International Conference on Agents and Artificial Intelligence - Volume 1: ICAART},
     year={2022},
@@ -62,15 +73,4 @@
     doi={10.5220/0010914300003116},
     isbn={978-989-758-547-0},
     issn={2184-433X},
-}
-
-@article{he2022chatbots,
-  title={Can chatbots help to motivate smoking cessation? A study on the effectiveness of motivational interviewing on engagement and therapeutic alliance},
-  author={He, Linwei and Ba\c{s}ar, Erkan and Wiers, Reinout W and Antheunis, Marjolijn L and Krahmer, Emiel},
-  journal={BMC Public Health},
-  volume={22},
-  number={1},
-  pages={726},
-  year={2022},
-  publisher={Springer}
 }
