--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,11 +3,7 @@
 
 @inproceedings{basar2024extent,
     title = "To What Extent Are Large Language Models Capable of Generating Substantial Reflections for Motivational Interviewing Counseling Chatbots? A Human Evaluation",
-    author = "Basar, Erkan  and
-      Hendrickx, Iris  and
-      Krahmer, Emiel  and
-      Bruijn, Gert-Jan  and
-      Bosse, Tibor",
+    author = "Erkan Basar  and Iris Hendrickx  and Emiel Krahmer  and Gert{-}Jan {de Bruijn} and Tibor Bosse",
     booktitle = "Proceedings of the 1st Human-Centered Large Language Modeling Workshop",
     year = {2024},
     publisher = "ACL",
@@ -25,7 +21,7 @@
 }
 
 @unpublished{balaji2024mish,
-     author   = {Divyaa Balaji and Erkan Basar and Margot van der Goot and Gert-Jan de Bruijn and Tibor Bosse and Reinout Wiers},
+     author   = {Divyaa Balaji and Erkan Basar and Margot van der Goot and Gert{-}Jan {de Bruijn} and Tibor Bosse and Reinout Wiers},
      title    = {Using counselling-inspired relational strategies to facilitate self-disclosure with a chatbot in a sensitive domain: A qualitative study},
      year       = {2024},
      note = {Manuscript submitted for publication},
@@ -34,7 +30,7 @@
 % ------------------- 2023
 
 @inproceedings{basar2023hyleca,
-    author = {Basar, Erkan and Balaji, Divyaa and He, Linwei and Hendrickx, Iris and Krahmer, Emiel and {de Bruijn}, Gert{-}Jan and Bosse, Tibor},
+    author = {Erkan Basar and Divyaa Balaji  and Linwei He and Iris Hendrickx and Emiel Krahmer and Gert{-}Jan {de Bruijn} and Tibor Bosse},
     title = {Hy{LECA}: A Framework for Developing Hybrid Long-Term Engaging Controlled Conversational Agents},
     year = {2023},
     isbn = {9798400700149},
@@ -53,7 +49,7 @@
 
 @article{he2022chatbots,
   title={Can chatbots help to motivate smoking cessation? A study on the effectiveness of motivational interviewing on engagement and therapeutic alliance},
-  author={He, Linwei and Basar, Erkan and Wiers, Reinout W and Antheunis, Marjolijn L and Krahmer, Emiel},
+  author={Linwei He and Erkan Basar and Wiers, Reinout W and Antheunis, Marjolijn L and Emiel Krahmer},
   journal={BMC Public Health},
   volume={22},
   number={1},
